--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
+    "react-native-scalable-image": "^1.1.0",
     "react-native-screens": "~3.4.0",
     "react-native-size-matters": "^0.4.0",
     "react-native-web": "~0.13.12",
